--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-uuid": "1.4.7"
   },
   "devDependencies": {
+    "browserify": "13.0.0",
     "eslint": "2.9.0",
     "font-awesome": "4.5.0",
     "gitbook-markdown-css": "^1.0.1",
@@ -18,7 +19,8 @@
     "less-plugin-clean-css": "^1.5.1",
     "preboot": "git+https://github.com/mdo/preboot.git#4aab4edd85f076d50609cbe28e4fe66cc0771701",
     "q": "1.4.1",
-    "q-plus": "0.0.8"
+    "q-plus": "0.0.8",
+    "uglify-js": "2.6.1"
   },
   "scripts": {
     "prepublish": "./src/build.sh"
