--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cheerio": "0.20.0",
+    "gitbook-plugin-search": ">=2.0.0",
     "lodash": "4.12.0",
     "node-uuid": "1.4.7"
   },
