--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "description": "Theme for using GitBook as an API documentation",
   "version": "1.0.0",
   "engines": {
-    "gitbook": ">=3.0.0-pre.13"
+    "gitbook": ">=3.0.0"
   },
   "dependencies": {
     "cheerio": "0.20.0",
     "gitbook-plugin-search": ">=2.0.0",
-    "lodash": "4.12.0",
-    "node-uuid": "1.4.7"
+    "gitbook-plugin-theme-default": ">=1.0.2",
+    "lodash": "4.12.0"
   },
   "devDependencies": {
     "eslint": "2.9.0",
