--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
     "gitbook": ">=4.0.0-alpha"
   },
   "dependencies": {
-    "cheerio": "0.20.0",
-    "classnames": "^2.2.5",
-    "gitbook-plugin-search": ">=2.0.0",
+    "gitbook-core": "4.0.0",
     "lodash": "4.12.0",
     "q": "1.4.1",
     "q-plus": "0.0.8"
   },
   "devDependencies": {
+    "classnames": "^2.2.5",
     "eslint": "^3.7.1",
     "eslint-config-gitbook": "^1.3.1",
     "gitbook-plugin": "4.0.0",
     "less": "^2.7.1",
     "less-plugin-clean-css": "^1.5.1",
-    "preboot": "git+https://github.com/mdo/preboot.git#4aab4edd85f076d50609cbe28e4fe66cc0771701",
-    "uglify-js": "2.6.1"
+    "preboot": "git+https://github.com/mdo/preboot.git#4aab4edd85f076d50609cbe28e4fe66cc0771701"
   },
   "scripts": {
     "build-js": "gitbook-plugin build ./src/index.js ./_assets/plugin.js",
